--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
-@import "./vendors/normalize.css";
+@import url(./vendors/normalize.css);
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
