--- a/src/components/Button/button.css
+++ b/src/components/Button/button.css
@@ -4,8 +4,8 @@
   justify-content: center;
   align-items: center;
   padding: 14px 20px;
-  border: 1px solid #A7A6A6;
-  color: #A7A6A6;
+  border: 1px solid #a7a6a6;
+  color: #a7a6a6;
   border-radius: 100px;
   font-family: 'Proto', Arial, sans-serif;
   font-weight: 300;
@@ -16,13 +16,13 @@
 }
 
 .button:hover {
-  background-color: #E0E0E0;
+  background-color: #e0e0e0;
 }
 
 /*-----BLUE-----*/
 .button_color_blue {
-  color: #224CFF;
-  border: 1px #224CFF solid;
+  color: #224cff;
+  border: 1px #224cff solid;
   cursor: pointer;
 }
 
@@ -55,7 +55,7 @@
 }
 
 .button_color_blue_onclick {
-  background-color: #224CFF;
+  background-color: #224cff;
   color: white;
 }
 
@@ -86,13 +86,12 @@
 }
 
 .button_color_black:hover {
-  background-color: #E0E0E0;
+  background-color: #e0e0e0;
 }
 
 .button_color_black_active:hover {
-  background-color: #2E2468;
+  background-color: #2e2468;
 }
-
 
 .button_color_black:active {
   background-color: black;
@@ -100,10 +99,9 @@
 }
 
 .button_color_black-nonactive {
-  border: 1px #A7A6A6 solid;
-  color: #A7A6A6;
+  border: 1px #a7a6a6 solid;
+  color: #a7a6a6;
 }
-
 
 /*-----CALENDAR-----*/
 .button_place_calendar-round {
@@ -123,15 +121,53 @@
   background-color: transparent;
 }
 
-@media (max-width: 1250px) {
+.buttons-scroll {
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  overflow-x: scroll;
+  white-space: nowrap;
+  scrollbar-width: none;
+}
 
+.buttons-scroll:last-of-type {
+  margin-bottom: 0;
+}
+
+.buttons-scroll::-webkit-scrollbar {
+  width: 0;
+}
+
+.buttons-scroll::-webkit-scrollbar {
+  width: 0px;
+}
+
+.buttons-scroll_place_event {
+  margin: 0 auto;
+}
+
+@media (max-width: 1024px) {
+  .buttons-scroll {
+    max-width: 646px;
+  }
+}
+
+@media (max-width: 640px) {
+  .buttons-scroll {
+    justify-content: flex-start;
+  }
+}
+
+@media (max-width: 1250px) {
   .button_color_blue_onclick {
     text-align: center;
   }
 }
 
 @media (max-width: 1024px) {
-
   .button {
     padding: 11px 15px;
     font-size: 12px;
@@ -156,7 +192,6 @@
 }
 
 @media (min-width: 320px) {
-
   .button-close {
     top: 15px;
     right: 15px;
