delete extra css files

--- a/src/components/WhereToGo/WhereToGo.css
+++ b/src/components/WhereToGo/WhereToGo.css
@@ -21,62 +21,4 @@
   }
 }
 
-.content {
-  flex: 1;
-  width: calc(100% - 150px);
-  max-width: 1770px;
-}
-
-@media (max-width: 1440px) {
-  .content {
-    width: calc(100% - 270px);
-  }
-}
-
-@media (max-width: 1024px) {
-  .content {
-    width: calc(100% - 254px);
-  }
-}
-
-@media (max-width: 640px) {
-  .content {
-    width: calc(100% - 30px);
-  }
-}
-
-.root {
-  width: 100%;
-  min-width: 320px;
-  margin: 0 auto;
-  font-family: 'PT Root', Arial, sans-serif;
-  color: black;
-  background-color: rgba(243, 242, 242, 1);
-  box-sizing: border-box;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  position: relative;
-}
-
-.root__section {
-  margin: 80px auto 120px;
-}
-
-@media (max-width: 1024px) {
-  .root__section {
-    margin-top: 45px;
-    margin-bottom: 100px;
-  }
-}
-
-@media (max-width: 640px) {
-  .root__section {
-    margin-top: 25px;
-    margin-bottom: 50px;
-  }
-
-  .root__section_search {
-    margin-top: 15px;
-  }
-}
+@import url(../Content/content.css);
