--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,9 +1,1 @@
-.mainlink {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    text-decoration: none;
-    z-index: 3;
-}
+@import url(../../blocks/mainlink.css);
