--- a/src/components/Intro/Intro.css
+++ b/src/components/Intro/Intro.css
@@ -1,2 +1,151 @@
-@import url(../../blocks/bbbs.css);
-@import url(../../blocks/logo.css);
+.bbbs {
+  max-width: 870px;
+  background: #8CDD94;
+  border-radius: 30px;
+  display: flex;
+  flex-direction: column;
+}
+
+.bbbs__logo {
+  width: 61.5%;
+  background-color: #FF8585;
+  border-radius: 30px 3px 200px 3px;
+}
+
+.bbbs__about {
+  background-color: #FF8585;
+  border-radius: 400px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 122px 17.24%;
+}
+
+.bbbs__text {
+  font-family: 'Proto', Arial, sans-serif;
+  font-weight: 300;
+  font-size: 23px;
+  line-height: 30px;
+  text-align: center;
+  color: #000000;
+  margin: 0;
+}
+
+@media (max-width: 1760px) {
+  .bbbs__about {
+      padding-left: 9%;
+      padding-right: 9%;
+  }
+}
+
+@media (max-width: 1440px) {
+  .bbbs__logo {
+      width: 69.298%;
+  }
+
+  .bbbs__about {
+      padding: 70px 5.26%;
+  }
+}
+
+@media (max-width: 1024px) {
+  .bbbs__logo {
+      width: 72.16%;
+  }
+
+  .bbbs__about {
+      padding: 89px 4.055% 88px;
+      border-radius: 70px 70px 30px 30px;
+  }
+
+  .bbbs__text {
+      font-size: 19px;
+      line-height: 23px;
+  }
+}
+
+@media (max-width: 1010px) {
+  .bbbs__about {
+      padding-top: 80px;
+      padding-bottom: 80px;
+  }
+
+}
+
+
+@media (max-width: 860px) {
+  .bbbs__logo {
+      width: 78.9655%;
+  }
+
+  .bbbs__about {
+      padding: 70px 5.177%;
+      padding-top: 35px;
+      padding-bottom: 36px;
+  }
+}
+
+.logo {
+  text-decoration: none;
+  display: flex;
+}
+
+.logo__img {
+  width: 100%;
+  height: 100%;
+}
+
+.logo_place_footer {
+  width: 415px;
+  height: 76px;
+  grid-area: logo;
+}
+
+.logo_place_mainpage {
+  width: 252px;
+  height: 46px;
+  margin: 40px 0 70px 30px;
+}
+
+.logo_place_about {
+  width: 357px;
+  height: 65px;
+  margin: 50px auto 80px;
+}
+
+@media (max-width: 1440px) {
+  .logo_place_mainpage {
+      margin-top: 35px;
+      margin-bottom: 43px;
+  }
+}
+
+@media (max-width: 1230px) {
+  .logo_place_mainpage {
+      width: 164px;
+      height: 30px;
+      margin: 27px 0 33px 15px;
+  }
+
+  .logo_place_footer {
+      width: 252px;
+      height: 46px;
+  }
+
+  .logo_place_about {
+      width: 252px;
+      height: 46px;
+      margin: 30px auto 50px;
+  }
+}
+
+@media (max-width: 860px) {
+  .logo_place_mainpage {
+      margin-top: 22px;
+      margin-bottom: 26px;
+  }
+
+  .logo_place_about {
+      margin: 20px auto 30px;
+  }
+}
