--- a/src/components/PopupPlaces/PopupPlaces.css
+++ b/src/components/PopupPlaces/PopupPlaces.css
@@ -22,7 +22,7 @@
   position: absolute;
   top: 20px;
   right: 20px;
-  background-image: url(../images/close.svg);
+  background-image: url(../../assets/img/close.svg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -186,7 +186,7 @@
 }
 
 .popup__feedback-button {
-  background-image: url(../images/popup-feedback-button.svg);
+  background-image: url(../../assets/img/popup-feedback-button.svg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
@@ -326,10 +326,6 @@
   max-width: 570px;
 }
 
-.recommendation_place_page {
-  margin: 0 auto 80px;
-}
-
 .recommendation__title {
   font-style: normal;
   font-family: 'Proto', Arial, sans-serif;
@@ -355,10 +351,6 @@
   color: #000;
   margin: 0 0 27px 0;
   text-align: center;
-}
-
-.recommendation__text_place_page {
-  margin: 0;
 }
 
 .recommendation__text-link {
