--- a/src/components/Story/Story.css
+++ b/src/components/Story/Story.css
@@ -57,3 +57,195 @@
   }
 }
 
+/* full story on story page*/
+.storypage__cite {
+  margin: 0;
+}
+
+.storypage__button {
+  width: 30px;
+  height: 30px;
+  margin: 0 50px;
+  border: 0;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  flex-shrink: 0;
+}
+
+.storypage__button_back {
+  background-image: url(../../assets/img/back-black.svg);
+}
+
+.storypage__button_forward {
+  background-image: url(../../assets/img/forward-black.svg);
+}
+
+.storypage__story{
+  margin: 0 auto;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
+
+.storypage__img {
+  display: block;
+  margin: 30px auto 50px;
+  border-radius: 30px;
+  width: 100%;
+  max-width: 1169px;
+  height: 769px;
+  object-fit: cover;
+}
+
+.storypage__heading {
+  margin: 0 auto;
+  padding: 0;
+  font-family: 'Proto', sans-serif;
+  font-weight: 300;
+  font-size: 44px;
+  line-height: 50px;
+  text-align: center;
+  color: rgba(0, 0, 0, 1);
+}
+
+.storypage__together {
+  margin: 0 auto;
+  margin-top: 10px;
+  padding: 0;
+  font-family: 'PT Root', sans-serif;
+  font-size: 14px;
+  line-height: 19px;
+  text-align: center;
+  color: rgba(70, 70, 70, 1);
+}
+
+.storypage__text {
+  max-width: 970px;
+  margin: 0 auto;
+  margin-top: 30px;
+  padding: 0;
+  font-family: 'Proto', sans-serif;
+  font-weight: 300;
+  font-size: 23px;
+  line-height: 30px;
+  text-align: center;
+  color: rgba(0, 0, 0, 1);
+}
+
+.storypage__paragraph {
+  max-width: 770px;
+  margin: 0 auto;
+  margin-top: 50px;
+  padding: 0;
+  font-family: 'PT Root', sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 26px;
+  text-align: left;
+  color: rgba(0, 0, 0, 1);
+}
+
+.storypage__cite {
+  margin: 0 auto;
+  margin-top: 80px;
+  margin-bottom: 80px;
+}
+
+.storypage__cite::before {
+  margin: 0 auto;
+  display: block;
+  content: '';
+  max-width: 770px;
+  border-top: 1px #464646 solid;
+}
+
+.storypage__cite::after {
+  margin: 0 auto;
+  display: block;
+  content: '';
+  max-width: 770px;
+  border-bottom: 1px #464646 solid;
+}
+
+.storypage__citetext {
+  max-width: 1170px;
+  margin: 0 auto;
+  padding: 0;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  font-family: 'Proto', sans-serif;
+  font-weight: 300;
+  font-size: 44px;
+  line-height: 50px;
+  text-align: center;
+  color: rgba(26, 26, 26, 1);
+}
+
+.storypage__slider {
+  display: flex;
+  overflow: visible;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+}
+
+.storypage__img_place_slider {
+  height: 200px;
+  max-width: 300px;
+  object-fit: fill;
+}
+
+@media (max-width: 1220px) {
+
+  .storypage__img {
+      height: 507px;
+  }
+}
+
+@media (max-width: 1024px) {
+  .storypage__caption {
+    font-size: 19px;
+    line-height: 23px;
+    max-width: 290px;
+    margin-bottom: 30px;
+    max-width: 770px;
+  }
+
+  .storypage__img {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    height: 507px;
+  }
+
+  .storypage__img_place_slider {
+    height: 379px;
+    max-width: 570px;
+  }
+}
+
+@media (max-width: 640px) {
+  .storypage__caption {
+    max-width: 100%;
+  }
+
+  .storypage__img {
+    margin-top: 20px;
+    margin-bottom: 15px;
+    height: 405px;
+  }
+}
+
+@media (max-width: 420px) {
+  .storypage__img {
+    height: 191px;
+  }
+
+  .storypage__img_place_slider {
+    height: 172px;
+    max-width: 260px;
+  }
+}
