--- a/src/components/Popup/popup.css
+++ b/src/components/Popup/popup.css
@@ -252,6 +252,22 @@
   text-align: left;
 }
 
+.popup__feedback-text::before {
+  content: '';
+  display: inline-block;
+  background-image: url('../../assets/img/popup-feedback-button.svg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 48px;
+  height: 48px;
+  margin: 0;
+  margin-right: 20px;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+}
+
 .popup__submit {
   margin: 0;
   margin-top: 30px;
