--- a/src/components/Place/Place.css
+++ b/src/components/Place/Place.css
@@ -19,7 +19,7 @@
   background-color: #f8d162;
 }
 
-.event-soon__description_color_pink {
+.event-soon__description_color_red {
   background-color: #ff8585;
 }
 
@@ -333,5 +333,55 @@
 @media (max-width: 320px) {
   .event-article__paragraph {
     margin-left: 0;
+  }
+}
+
+.events-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-column-gap: 30px;
+  padding: 80px 0 90px;
+}
+
+.events-grid_place_raw {
+  grid-template-columns: repeat(4, 1fr);
+  padding: 0;
+}
+
+@media (max-width: 1440px) {
+  .events-grid_place_raw {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media (max-width: 1420px) {
+  .events-grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .events-grid_place_raw {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 1024px) {
+  .events-grid {
+    padding: 30px 0 70px;
+  }
+}
+
+@media (max-width: 950px) {
+  .events-grid {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .events-grid_place_raw {
+    grid-template-columns: 1fr;
+  }
+}
+
+@media (max-width: 420px) {
+  .events-grid {
+    padding-bottom: 20px;
   }
 }
