add html/css changes to Story Page

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,3 +1,4 @@
 @import url(../../blocks/mainlink.css);
 @import url(../../blocks/logo.css);
 @import url(../../blocks/heading.css);
+@import url(../../blocks/main.css);
