--- a/src/components/Button/button.css
+++ b/src/components/Button/button.css
@@ -24,6 +24,10 @@
   background-color: #e0e0e0;
 }
 
+.button_place_scroll {
+  margin-bottom: 10px;
+}
+
 /*-----BLUE-----*/
 .button_color_blue {
   color: #224cff;
@@ -126,16 +130,17 @@
   background-color: transparent;
 }
 
+/*-----SCROLL-----*/
 .buttons-scroll {
   width: 100%;
+  max-width: 1135px;
   height: 100%;
   padding: 0;
   display: flex;
   justify-content: center;
   text-align: center;
-  overflow-x: scroll;
   white-space: nowrap;
-  scrollbar-width: none;
+  flex-wrap: wrap;
 }
 
 .buttons-scroll:last-of-type {
@@ -152,18 +157,6 @@
 
 .buttons-scroll_place_event {
   margin: 0 auto;
-}
-
-@media (max-width: 1024px) {
-  .buttons-scroll {
-    max-width: 646px;
-  }
-}
-
-@media (max-width: 640px) {
-  .buttons-scroll {
-    justify-content: flex-start;
-  }
 }
 
 @media (max-width: 1250px) {
@@ -193,6 +186,34 @@
   .button_color_blue-round {
     width: 40px;
     height: 40px;
+  }
+
+  .buttons-scroll {
+    flex-wrap: nowrap;
+    overflow-x: scroll;
+  }
+
+   /*
+  класс buttons-scroll_overflow добаваляется тогда, когда количество кнопок слишком велико для показа на экране
+  и появляется прокуртка. Когда кнопок мало, согласно макету, они встают по центру.
+  */
+
+  .buttons-scroll_overflow {
+    margin-left: 127px;
+    width: calc(100% + 127px);
+    justify-content: flex-start;
+  }
+}
+
+@media (max-width: 640px) {
+  .buttons-scroll {
+    margin-left: 15px;
+    width: calc(100% + 15px);
+    justify-content: flex-start;
+  }
+
+  .buttons-scroll_place_event {
+    margin-left: 0;
   }
 }
 
