--- a/src/components/Content/content.css
+++ b/src/components/Content/content.css
@@ -2,6 +2,10 @@
   flex: 1;
   width: calc(100% - 150px);
   max-width: 1770px;
+  overflow: visible;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .root {
@@ -16,6 +20,12 @@
   display: flex;
   flex-direction: column;
   position: relative;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
 }
 
 .root__section {
