add html/css part2

--- a/src/components/Place/Place.css
+++ b/src/components/Place/Place.css
@@ -14,7 +14,7 @@
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
-  padding: 15px 30px 30px;
+  padding: 15px 30px;
   border-radius: 30px;
   background-color: #f8d162;
 }
@@ -34,6 +34,7 @@
 .event-soon__description_size_big {
   max-height: 629px;
   overflow: hidden;
+  padding-bottom: 30px;
 }
 
 .event-soon__description_size_small {
@@ -41,7 +42,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
 }
 
 .event-soon__mentor {
@@ -55,11 +55,20 @@
 }
 
 .event-soon__caption {
-  margin: 15px auto 70px;
+  margin: 22px auto 70px;
   font-family: 'PT Root', Arial, Helvetica, sans-serif;
   font-size: 10px;
   line-height: 13px;
   font-weight: 400;
+}
+
+.event-soon__caption_size_big {
+  margin-top: 15px;
+}
+
+.event-soon__caption_with_tag {
+  margin-top: 5px;
+  margin-bottom: 0;
 }
 
 .event-soon__caption_without_tag {
@@ -102,6 +111,7 @@
   letter-spacing: 0.2px;
   color: #224cff;
   text-decoration: none;
+  margin-top: auto;
 }
 
 .event-soon__link:hover {
@@ -123,7 +133,12 @@
 
 .event-soon__about-wrapper_size_small {
   height: 224px;
-  margin-bottom: 30px;
+}
+
+@media (max-width: 1440px) {
+  .event-soon__caption_place_articles {
+    margin-bottom: 10px;
+  }
 }
 
 @media (max-width: 1280px) {
@@ -133,6 +148,14 @@
 }
 
 @media (max-width: 1024px) {
+  .event-soon__description_size_big {
+    padding-bottom: 15px;
+  }
+
+  .event-soon__description_size_small {
+    height: 176px;
+  }
+
   .event-soon__description {
     padding: 15px;
   }
@@ -339,13 +362,17 @@
 .events-grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-column-gap: 30px;
-  padding: 80px 0 90px;
+  gap: 30px;
+  padding: 80px 0 0;
 }
 
 .events-grid_place_raw {
   grid-template-columns: repeat(4, 1fr);
   padding: 0;
+}
+
+.events-grid_place_article {
+  margin-bottom: 80px;
 }
 
 @media (max-width: 1440px) {
@@ -366,7 +393,15 @@
 
 @media (max-width: 1024px) {
   .events-grid {
-    padding: 30px 0 70px;
+    padding-top: 30px;
+  }
+
+  .events-grid_place_raw {
+    padding: 0;
+  }
+
+  .events-grid_place_article {
+    margin-bottom: 60px;
   }
 }
 
@@ -382,6 +417,6 @@
 
 @media (max-width: 420px) {
   .events-grid {
-    padding-bottom: 20px;
+    margin-bottom: 30px;
   }
 }
