feat: answer article showing on click

--- a/src/components/QuestionsPage/QuestionsPage.css
+++ b/src/components/QuestionsPage/QuestionsPage.css
@@ -1,6 +1,6 @@
 .questions {
   display: grid;
-  grid-template-rows: repeat(3, 1fr);
+  grid-template-rows: repeat(3, auto);
   gap: 30px;
   margin: 0;
   padding: 0;
