--- a/src/components/Question/Question.css
+++ b/src/components/Question/Question.css
@@ -39,6 +39,17 @@
   display: flex;
 }
 
+.question__answer {
+  font-family: 'PT Root';
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 26px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: #1a1a1a;
+}
+
 .question__btn {
   width: 100px;
   height: 100px;
@@ -50,6 +61,10 @@
   background-size: contain;
   z-index: 4;
   cursor: pointer;
+}
+
+.question__btn_rotated {
+  rotate: 45deg;
 }
 
 @media (max-width: 1024px) {
@@ -69,6 +84,11 @@
     font-size: 19px;
     line-height: 23px;
     -webkit-line-clamp: 4;
+  }
+
+  .question__answer {
+    font-size: 15px;
+    line-height: 21px;
   }
 
   .question__btn {
