--- a/src/components/Button/button.css
+++ b/src/components/Button/button.css
@@ -4,8 +4,8 @@
   justify-content: center;
   align-items: center;
   padding: 14px 20px;
-  border: 1px solid #a7a6a6;
-  color: #a7a6a6;
+  border: 1px solid #224cff;
+  color: #224cff;
   border-radius: 100px;
   font-family: 'Proto', Arial, sans-serif;
   font-weight: 300;
@@ -15,6 +15,12 @@
   cursor: pointer;
 }
 .button:disabled {
+  border: 1px #a7a6a6 solid;
+  color: #a7a6a6;
+  cursor: pointer;
+}
+
+.button_disabled {
   border: 1px #a7a6a6 solid;
   color: #a7a6a6;
   cursor: pointer;
@@ -204,7 +210,7 @@
     overflow-x: scroll;
   }
 
-   /*
+  /*
   класс buttons-scroll_overflow добаваляется тогда, когда количество кнопок слишком велико для показа на экране
   и появляется прокуртка. Когда кнопок мало, согласно макету, они встают по центру.
   */
