--- a/src/components/Question/Question.css
+++ b/src/components/Question/Question.css
@@ -37,6 +37,8 @@
 
 .question__tags {
   display: flex;
+  flex-wrap: wrap;
+  max-width: calc(100% - 80px);
 }
 
 .question__answer {
@@ -94,6 +96,7 @@
   .question__btn {
     width: 50px;
     height: 50px;
+    padding: 10px;
     position: absolute;
     bottom: 15px;
     right: 15px;
