some css changes

--- a/src/components/Place/Place.css
+++ b/src/components/Place/Place.css
@@ -72,7 +72,8 @@
 }
 
 .event-soon__caption_without_tag {
-  margin-top: 31.8px;
+  margin-top: 22px;
+  margin-bottom: 0;
 }
 
 .event-soon__title {
