--- a/src/components/Button/button.css
+++ b/src/components/Button/button.css
@@ -30,10 +30,6 @@
   background-color: #e0e0e0;
 }
 
-.button_place_scroll {
-  margin-bottom: 10px;
-}
-
 .button_nodecoration {
   text-decoration: none;
 }
@@ -176,6 +172,10 @@
   margin: 0 auto;
 }
 
+.button_place_scroll {
+  margin-bottom: 10px;
+}
+
 @media (max-width: 1250px) {
   .button_color_blue_onclick {
     text-align: center;
@@ -208,6 +208,7 @@
   .buttons-scroll {
     flex-wrap: nowrap;
     overflow-x: scroll;
+    justify-content: flex-start;
   }
 
   /*
@@ -215,11 +216,11 @@
   и появляется прокуртка. Когда кнопок мало, согласно макету, они встают по центру.
   */
 
-  .buttons-scroll_overflow {
+  /* .buttons-scroll_overflow {
     margin-left: 127px;
     width: calc(100% + 127px);
     justify-content: flex-start;
-  }
+  } */
 }
 
 @media (max-width: 640px) {
