--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -22,19 +22,6 @@
   padding: 0;
   display: flex;
   flex-direction: column;
-  white-space: nowrap;
-
-  position: sticky;
-  top: 0;
-  left: 0;
-  background: rgba(243, 242, 242, 1);
-  z-index: 10;
-
-  transition: top .6s ease-in-out .1s;
-}
-
-.header_sticky_hide {
-  top: -100px;
 }
 
 .header__wrapper {
@@ -45,21 +32,23 @@
   padding: 0;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
   align-items: center;
 }
 
 .header__logo {
   width: 190px;
   height: 28px;
-  margin: 0;
-  padding: 0;
+  margin-right: 325px;
   text-decoration: none;
   cursor: pointer;
   background-image: url('../../assets/img/logo.svg');
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
+}
+
+.header__menu {
+  margin-right: 415px;
 }
 
 .header__logo:hover {
@@ -84,6 +73,7 @@
   padding: 0;
   list-style-type: none;
   position: relative;
+  white-space: nowrap;
 }
 
 .header__list-item:last-child {
@@ -151,12 +141,13 @@
   height: 20px;
   background-color: #a7a6a6;
   left: -20px;
-  top: 2px;
+  top: 5px;
   position: relative;
 }
 
 .header__button-login_authorized {
   background-image: url('../../assets/img/lk.svg');
+  text-decoration: none;
 }
 
 .header__burger {
@@ -225,7 +216,7 @@
   display: none;
   width: 30px;
   height: 20px;
-  background-image: url('../../assets/img/burger-menu.svg');
+  background-image: url('../../assets/img//burger-menu.svg');
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
@@ -285,6 +276,7 @@
   flex-direction: column;
   margin: 0 15px 0 30px;
   flex-shrink: 3;
+  width: 100%;
 }
 
 .header__input {
@@ -310,6 +302,19 @@
 }
 
 /* медиа-запросы */
+@media (max-width: 1918px) {
+  .header__wrapper {
+    justify-content: space-between;
+  }
+
+  .header__logo {
+    margin-right: 0;
+  }
+
+  .header__menu {
+    margin-right: 0;
+  }
+}
 
 @media (max-width: 1440px) {
   .header__wrapper {
