--- a/src/components/PopupPlaces/PopupPlaces.css
+++ b/src/components/PopupPlaces/PopupPlaces.css
@@ -1,56 +1,23 @@
-.recommendation {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  position: relative;
+.popup__form_type_recommendation {
+  opacity: 0;
+  height: 0;
+  transition: height 0.5s ease-out;
+}
+.popup__form_opened {
+  opacity: 1;
+  height: 500px;
+}
+.popup__inputs {
   padding: 50px 100px;
-  background-color: #fff;
-  border-radius: 30px;
-  max-width: 570px;
+  opacity: 0;
+  transition: 0.4s ease;
 }
-
-.recommendation__title {
-  font-style: normal;
-  font-family: 'Proto', Arial, sans-serif;
-  font-weight: 300;
-  font-size: 23px;
-  line-height: 30px;
-  color: #000;
-  margin: 0 0 16px 0;
-}
-
-.recommendation__texts {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  max-width: 547px;
-}
-
-.recommendation__text {
-  font-family: 'PT Proto', Arial, sans-serif;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 20px;
-  color: #000;
-  margin: 0 0 27px 0;
-  text-align: center;
-}
-
-.recommendation__text-link {
-  color: #224cff;
-  text-decoration: none;
-}
-
-.recommendation__text-link_opened {
-  color: #2e2468;
-}
-
-.recommendation__text-link:hover {
-  color: #2e2468;
+.popup__inputs_show {
+  opacity: 1;
 }
 
 @media (max-width: 640px) {
-  .recommendation {
+  .popup__inputs {
     padding: 30px 15px;
   }
 }
