feat: books page

--- a/src/components/Book/Book.css
+++ b/src/components/Book/Book.css
@@ -32,7 +32,7 @@
   min-height: 320px;
 }
 
-.book__cover_genre_sсience {
+.book__cover_genre_science {
   background-color: #ff8585;
 }
 .book__cover_genre_fiction {
