feat: videos page + minor fixes (naming)

--- a/src/components/Button/button.css
+++ b/src/components/Button/button.css
@@ -211,7 +211,7 @@
     justify-content: flex-start;
   }
 
-  .buttons-scroll_books {
+  .buttons-scroll_centered {
     justify-content: center;
   }
 
