--- a/src/components/Popup/popup.css
+++ b/src/components/Popup/popup.css
@@ -45,7 +45,15 @@
 /* ТИПЫ ПОПАПОВ И ИХ КОНТЕЙНЕРОВ */
 
 .popup_type_video {
-  overflow-y: hidden;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.4);
+  min-width: 100%;
+  min-height: 100%;
+  margin: 0;
+  padding: 0;
+  justify-content: center;
+  align-items: center;
 }
 
 .popup_type_success {
