--- a/src/components/Button/button.css
+++ b/src/components/Button/button.css
@@ -144,16 +144,40 @@
 }
 
 /*-----SCROLL-----*/
-.buttons-scroll {
+.scroll-container {
+  position: relative;
   width: 100%;
   max-width: 1135px;
   height: 100%;
   padding: 0;
-  display: flex;
-  justify-content: center;
+}
+
+.buttons-scroll {
   text-align: center;
   white-space: nowrap;
-  flex-wrap: wrap;
+  overflow-x: scroll;
+  padding: 0 5%;
+}
+
+.buttons-scroll::after {
+  position: absolute;
+  content: '';
+  width: 5%;
+  height: 100%;
+  right: 0;
+  top: 0;
+  background: linear-gradient(to right, rgba(243, 242, 242, 0), rgba(243, 242, 242, 1));
+}
+
+.buttons-scroll::before {
+  position: absolute;
+  content: '';
+  width: 5%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  background: linear-gradient(to right, rgba(243, 242, 242, 1), rgba(243, 242, 242, 0));
+
 }
 
 .buttons-scroll:last-of-type {
@@ -174,6 +198,7 @@
 
 .button_place_scroll {
   margin-bottom: 10px;
+  display: inline;
 }
 
 @media (max-width: 1250px) {
@@ -204,36 +229,9 @@
     width: 40px;
     height: 40px;
   }
-
-  .buttons-scroll {
-    flex-wrap: nowrap;
-    overflow-x: scroll;
-    justify-content: flex-start;
-  }
-
-  .buttons-scroll_centered {
-    justify-content: center;
-  }
-
-  /*
-  класс buttons-scroll_overflow добаваляется тогда, когда количество кнопок слишком велико для показа на экране
-  и появляется прокуртка. Когда кнопок мало, согласно макету, они встают по центру.
-  */
-
-  /* .buttons-scroll_overflow {
-    margin-left: 127px;
-    width: calc(100% + 127px);
-    justify-content: flex-start;
-  } */
 }
 
 @media (max-width: 640px) {
-  .buttons-scroll {
-    margin-left: 15px;
-    width: calc(100% + 15px);
-    justify-content: flex-start;
-  }
-
   .buttons-scroll_place_event {
     margin-left: 0;
   }
