--- a/src/components/Cards/StoryCard/StoryCard.css
+++ b/src/components/Cards/StoryCard/StoryCard.css
@@ -2,47 +2,39 @@
   max-width: 870px;
   height: auto;
   position: relative;
-  padding: 0;
-  margin-right: 0;
   background-position: center;
   background-size: cover;
   border-radius: 30px;
   z-index: 0;
+}
+
+.story__overlay {
+  width: 100%;
+  height: 100%;
+  border-radius: 30px;
+  background: rgba(0, 0, 0, 0.6);
   display: flex;
   align-items: center;
   justify-content: center;
-  text-decoration: none;
+  opacity: 0;
 }
 
-.story::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  background-color: #464646;
-  opacity: 0.8;
-  mix-blend-mode: multiply;
-  border-radius: 30px;
-  z-index: 1;
+.story__overlay:hover {
+  opacity: 1;
 }
 
 .story__title {
   margin: 0;
-  padding: 0;
   color: white;
   font-family: 'Proto', Arial, sans-serif;
   font-weight: 300;
   font-size: 23px;
   line-height: 30px;
-  text-align: center;
-  z-index: 2;
 }
 
-@media (max-width: 1440px) {
-  .story::after {
-    display: none;
+@media (max-width: 1024px) {
+  .story__overlay:hover {
+    opacity: 0;
   }
 
   .story__title {
