--- a/src/components/Pages/ReadAndWatch/ReadAndWatch.css
+++ b/src/components/Pages/ReadAndWatch/ReadAndWatch.css
@@ -50,7 +50,7 @@
   border: 0;
   outline: none;
   background-image: url('../../../assets/img/forward.svg');
-  rotate: 180deg;
+  transform: rotate(0.5turn);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
