--- a/src/components/UI/Button/button.css
+++ b/src/components/UI/Button/button.css
@@ -13,6 +13,7 @@
   line-height: 19px;
   letter-spacing: 0.2px;
   cursor: pointer;
+  outline: none;
 }
 .button:disabled {
   border: 1px #a7a6a6 solid;
@@ -59,6 +60,8 @@
   width: 48px;
   height: 48px;
   cursor: pointer;
+  outline: none;
+  background-image: url('../../../assets/img/calendar-btn.svg');
 }
 
 /* .button_color_blue-round:hover {
@@ -177,7 +180,6 @@
   left: 0;
   top: 0;
   background: linear-gradient(to right, rgba(243, 242, 242, 1), rgba(243, 242, 242, 0));
-
 }
 
 .buttons-scroll:last-of-type {
