--- a/src/components/Pages/PersonalAccount/PersonalAccount.css
+++ b/src/components/Pages/PersonalAccount/PersonalAccount.css
@@ -1,26 +1,3 @@
-.personal-account {
-  margin: 30px auto 0;
-  padding: 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  flex: 1;
-  overflow: visible;
-}
-
-.personal-account__buttons {
-  margin: 0;
-  margin-bottom: 30px;
-  padding: 0;
-  display: flex;
-  flex-direction: row;
-  align-self: flex-end;
-}
-
-.personal-account__button_closed {
-  display: none;
-}
-
 .personal-account__text {
   margin: 0;
   margin-right: 30px;
@@ -32,10 +9,6 @@
   text-align: right;
   color: #a7a6a6;
   cursor: pointer;
-}
-
-.personal-account__photo-text_closed {
-  display: none;
 }
 
 .personal-account__text:hover {
@@ -66,11 +39,6 @@
   line-height: 30px;
   text-align: center;
   color: #1a1a1a;
-}
-
-.personal-account__title_type_content {
-  width: 100%;
-  margin-bottom: 50px;
 }
 
 /*---------------------------*/
@@ -140,10 +108,6 @@
   background-size: cover;
 }
 
-.personal-account__photo-title {
-  display: block;
-}
-
 .personal-account__inputs {
   margin: 0;
   padding: 30px;
@@ -169,24 +133,13 @@
   line-height: 19px;
   text-align: left;
 }
+
 .personal-account__input-error::placeholder {
   color: #ff4e4e;
 }
 
-.personal-account__input_type_place {
-  grid-column: 1/2;
-}
-
-.personal-account__input_type_date {
-  /* width: 30.5%; */
-  /* margin-left: 4%; */
-  grid-column: 3/4;
-}
-
 .personal-account__textarea {
   display: block;
-  /* width: 93%;
-  height: 286px; */
   margin: 0;
   padding: 13px 20px 16px 20px;
   background-color: #f3f2f2;
@@ -325,7 +278,6 @@
 }
 
 .personal-account__submit {
-  /* max-width: 27%; */
   margin: 0;
   margin-top: 30px;
   padding: 0;
@@ -334,6 +286,25 @@
   justify-content: flex-end;
   align-items: center;
   grid-column: 3/4;
+}
+
+.personal-account__title_type_content {
+  width: 100%;
+  margin-bottom: 50px;
+}
+.personal-account__input_type_place {
+  grid-column: 1/2;
+}
+.personal-account__input_type_date {
+  grid-column: 3/4;
+}
+
+.personal-account__button_closed {
+  display: none;
+}
+
+.personal-account__photo-text_closed {
+  display: none;
 }
 
 /*------------PERSONAL-ACCOUNT-ADDED PROFILE----------------*/
@@ -405,6 +376,7 @@
   font-size: 14px;
   line-height: 19px;
   text-align: left;
+  white-space: normal;
 }
 
 .personal-account__event-text {
@@ -434,7 +406,6 @@
   font-size: 15px;
   line-height: 19px;
   color: #224cff;
-  border: none;
 }
 
 .personal-account__photo-opened {
@@ -557,14 +528,15 @@
   }
 
   .personal-account__feedback-btn:nth-of-type(2) {
-    grid-column: 2/3;
-    justify-self: end;
+    grid-column: 0/3;
+    grid-row: 2/3;
+    justify-self: left;
   }
 
   .personal-account__feedback-btn:nth-of-type(3) {
     grid-column: 2/3;
     grid-row: 2/3;
-    justify-self: right;
+    justify-self: end;
   }
 }
 
