--- a/src/components/Containers/Navigation/Navigation.css
+++ b/src/components/Containers/Navigation/Navigation.css
@@ -15,6 +15,11 @@
   border: none;
   background-color: transparent;
   cursor: pointer;
+  text-align: left;
+}
+
+.burger__city-btn:first-of-type {
+  margin-right: 10px;
 }
 
 .burger__city-btn:hover {
