--- a/src/components/Pages/PersonalAccount/PersonalAccount.css
+++ b/src/components/Pages/PersonalAccount/PersonalAccount.css
@@ -42,9 +42,6 @@
   color: #224cff;
 }
 
-.personal-account__text:last-of-type {
-}
-
 .personal-account__events {
   width: 100%;
   display: flex;
@@ -122,21 +119,18 @@
   line-height: 19px;
   color: #a7a6a6;
   cursor: pointer;
-  position: relative;
 }
 
 .personal-account__photo-text::before {
   content: '';
   display: block;
-  position: absolute;
-  bottom: 33px;
-  left: 7px;
   width: 100px;
   height: 100px;
   background-image: url('../../../assets/img/personal-account-btn-add-photo.svg');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  margin: 0 auto 15px;
 }
 
 .personal-account__inputs {
@@ -348,6 +342,12 @@
   flex-direction: row;
   align-items: flex-start;
   align-self: flex-start;
+  overflow-x: scroll;
+  scrollbar-width: none;
+}
+
+.personal-account__event::-webkit-scrollbar {
+  width: 0;
 }
 
 .personal-account__event-wrapper {
@@ -623,7 +623,6 @@
   }
 
   .personal-account__photo-text::before {
-    left: 16px;
     width: 80px;
     height: 80px;
   }
