--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,27 +1,19 @@
-/*.header {
+.header {
   width: 100%;
-  margin: 0 auto;
+  margin: 74px auto 0 auto;
   padding: 0;
   display: flex;
   flex-direction: column;
-  position: relative;
-  transition: top 2s linear .1s;
-}
-
-.header_sticky {
-  position: sticky;
-  top: 0;
+  position: fixed;
+  top: -74px;
   left: 0;
   background: rgba(243, 242, 242, 1);
   z-index: 10;
-}*/
+  transition: margin-top ease-in .3s;
+}
 
-.header {
-  width: 100%;
-  margin: 0 auto;
-  padding: 0;
-  display: flex;
-  flex-direction: column;
+.header_sticky_hide {
+  margin-top: 0;
 }
 
 .header__wrapper {
