--- a/src/components/Cards/Card/Card.css
+++ b/src/components/Cards/Card/Card.css
@@ -87,6 +87,7 @@
   font-weight: 300;
   text-align: center;
   color: #000000;
+  text-decoration: none;
 }
 
 .event-soon__subtitle {
@@ -102,9 +103,11 @@
 
 .event-soon__img {
   object-fit: cover;
-  max-height: 70%;
   border-radius: 15px;
   margin-bottom: 15px;
+  height: 100%;
+  max-height: 410px;
+  width: 100%;
 }
 
 .event-soon__link {
