--- a/src/components/Cards/QuestionCard/QuestionCard.css
+++ b/src/components/Cards/QuestionCard/QuestionCard.css
@@ -4,8 +4,8 @@
   padding: 50px 50px 47px;
   display: flex;
   flex-direction: column;
-  position: relative;
   width: 100%;
+  max-width: 870px;
   box-sizing: border-box;
 }
 
@@ -50,9 +50,13 @@
   letter-spacing: 0px;
   text-align: left;
   color: #1a1a1a;
+  padding-bottom: 20px;
 }
 
 .question__btn {
+  position: absolute;
+  right: -100px;
+  top: 44px;
   width: 100px;
   height: 100px;
   border: none;
@@ -63,10 +67,11 @@
   background-size: contain;
   z-index: 4;
   cursor: pointer;
+  transition: transform ease-in-out 0.4s;
 }
 
 .question__btn_rotated {
-  rotate: 45deg;
+  transform: rotate(0.125turn);
 }
 
 @media (max-width: 1024px) {
@@ -98,6 +103,7 @@
     height: 50px;
     padding: 10px;
     position: absolute;
+    top: auto;
     bottom: 15px;
     right: 15px;
   }
