--- a/src/components/Cards/StoryCard/StoryCard.css
+++ b/src/components/Cards/StoryCard/StoryCard.css
@@ -12,20 +12,16 @@
   width: 100%;
   height: 100%;
   border-radius: 30px;
-  background: rgba(0, 0, 0, 0.6);
   display: flex;
   align-items: center;
   justify-content: center;
-  opacity: 0;
+
   transition: 0.4s ease;
 }
 
-.story__overlay:hover {
-  opacity: 1;
-}
-
 .story__title {
-  margin: 0;
+  align-self: flex-end;
+  margin: 0 0 30px 0;
   color: white;
   font-family: 'Proto', Arial, sans-serif;
   font-weight: 300;
